syntax = "proto3";

package ImageDefinition;

message ImageList {
    repeated SingleImage images = 1;
}

message SingleImage {
string id = 1;
string title = 2;
string url = 3;
string description = 4;
int32 totalLikes = 5;
string userName = 6;
string avatar = 7;
string created_at = 8;
string updated_at = 9;
string user_id = 10;
}